Changed Instructions Page

--- a/edu.dhbw.andobjviewer.ModelChooser/assets/help/index.html
+++ b/edu.dhbw.andobjviewer.ModelChooser/assets/help/index.html
@@ -46,7 +46,7 @@
 				<li>After it has finished, you will see a live video stream from the camera.</li>
 				<li>Now point the camera to the marker, you should see something like this:</li>
 			</ul>
-			<img src="AndARScreenshot.jpg">
+			<img src="AndARScreenshot.png">
 			<h2><a name="screenshot">Taking a screenshot</a></h2>
 			<ul>
 				<li>First press the menu key.</li>
